src/test/deca/syntax/invalid/affectationPrint.deca
// Description:
//    programme vide
//
// Resultats:
//    Erreur : Syntaxique : 
//
// Historique:
//    cree le 11/01/2023

{
int a = println("hello");
}

